--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Ultra&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="background-block">
+        <header>
+            <a class="logo" href="index.html">BKR</a>
+            <nav>
+                <ul>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="recipes.html">Recipes</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 </body>
 </html>
