Added the first section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,24 @@
                 </ul>
             </nav>
         </header>
+        <section class="content-section">
+            <h6>Sience 1984</h6>
+            <h1>Fresh<br>
+                Bakery<br>
+                Every Day</h1>
+            <p>Even the all-powerful Pointing has no control<br> about the blind texts it is an almost.</p>
+        </section>
+         <img class="image-right" src="images/Shape (1).svg"alt="shape1">
+         <img class="image-bottom" src="images/Shape (2).svg"alt="shape2">
+         <img class="image-top" src="images/xazi.svg"alt="shape3">
+        </div>
+        <div class="container">
+            <img src="images/Bread.png" alt="Image 1" class="image">
+            <img src="images/Oval.png" alt="Image 2" class="image">
+            <img src="images/Bitmap.png" alt="Image 3" class="image">
+            <img src="images/Shape.png" alt="Image 4" class="image">
+            <img src="images/Combined Shape.png" alt="Image 5" class="image">
+            <img src="images/down.png"alt="image 6" class="image">
+        </div>
 </body>
 </html>
