Added the second Section

--- a/index.html
+++ b/index.html
@@ -45,5 +45,28 @@
             <img src="images/Combined Shape.png" alt="Image 5" class="image">
             <img src="images/down.png"alt="image 6" class="image">
         </div>
+        <div class="background-block2">
+            <section>
+            <div class="content-section2">
+            <h6 class="caption1">About Us</h6>
+            <h1 class="caption2">Baking Special Moments</h1>
+            <h6 class="caption3">01</h6>
+            <h5 class="caption4">Last view back</h5>
+            <p class="content1">She packed her seven versalia, put her initial into<br>
+                 the belt and made herself on the way.
+                When she<br> reached the first hills of the Italic.</p>
+                <h6 class="caption5">On the skyline</h6>
+                <h6 class="caption6">Pityful a rethoric</h6>
+                <h6 class="caption7">On her way she</h6>
+            </div>
+            <div class="container2">
+            <img src="images/block1.png"alt="block1" class="image2">
+            <img src="images/block2.png"alt="block2"class="image2">
+            <img src="images/Shape.png"alt="shape"class="image2">
+            <img src="images/dots.png"alt="dots"class="image2">
+            <img src="images/arrows.png"alt="arrows"class="image2">
+            </div>
+            </section>
+        </div>
 </body>
 </html>
