Added the last Section and 3 blocks

--- a/index.html
+++ b/index.html
@@ -68,5 +68,33 @@
             </div>
             </section>
         </div>
+        <div class="background-block3">
+            <section>
+                <div class="content-section3">
+                <h6 class="caption8">Our Features</h6>
+                <h2 class="caption9">Baked With Love</h2>
+                </div>
+                <div class="blocks-container">
+                    <div class="block">
+                        <img src="images/cup.png" alt="Image 1" class="block-image">
+                        <h3 class="block-title">Fresh</h3>
+                        <p class="block-text">Nothing the copy said could<br>convince her and so 
+                            it didn't take long.</p>
+                    </div>
+                    
+                    <div class="block">
+                        <img src="images/cake.png" alt="Image 2" class="block-image">
+                        <h3 class="block-title">Natural</h3>
+                        <p class="block-text">Copy Writers ambushed her, made her<br> drunk with Longe and Parole.</p>
+                    </div>
+                    
+                    <div class="block">
+                        <img src="images/bread2.png" alt="Image 3" class="block-image">
+                        <h3 class="block-title">Tasty</h3>
+                        <p class="block-text">And if she hasn't been rewritten, then<br> they are still using her.</p>
+                    </div>
+                </div>
+            </section>
+        </div>
 </body>
 </html>
